# hookbox

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
src/hookbox/: __init__.py  __main__.py  config.py  exceptions.py  logging.py
src/hookbox/adapters/: database.py
src/hookbox/api/: routes.py  websocket.py
src/hookbox/domain/: models.py
src/hookbox/services/: cleanup.py  hook_service.py
static/: app.js  index.html
tests/: conftest.py
tests/integration/: test_api.py
tests/unit/: test_database.py  test_hook_service.py
